<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/first_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etMiddleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstName"
        android:layout_marginTop="5dp"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMiddleName"
        android:layout_marginTop="5dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etStudentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLastName"
        android:layout_marginTop="5dp"
        android:hint="@string/student_number"
        android:inputType="number"/>

    <LinearLayout
        android:id="@+id/genderAndMajorTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/etStudentNumber"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gender"
            android:textStyle="bold"
            android:layout_weight=".2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/major"
            android:textStyle="bold"
            android:layout_weight=".5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_of_birth"
            android:textStyle="bold"
            android:layout_weight=".3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/genderAndMajor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/genderAndMajorTitles"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_weight=".2" />

        <TextView
            android:id="@+id/tvMajor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_weight=".5"/>

        <TextView
            android:id="@+id/tvDateOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight=".5"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderAndMajor"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStudents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnRegister"/>

</RelativeLayout>